--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -29,13 +29,18 @@ jobs:
           targets:   x86_64-unknown-linux-gnu, wasm32-unknown-unknown
 
       - name: Check buildability
-        run:  |
-          cargo build -p sqlx-d1
-          cargo build -p sqlx-d1 --features json
-          cargo build -p sqlx-d1 --features uuid
-          cargo build -p sqlx-d1 --features macros
-          cargo build -p sqlx-d1 --features json,uuid,macros
+        working-directory: ./sqlx-d1
+        run: |
+          cargo build
+          cargo build --features json
+          cargo build --features uuid
+          cargo build --features macros
+          cargo build --features json,uuid,macros
 
       - name: Check sandbox
-        run:  |
-          echo 'Please wait for offline mode...'
+        working-directory: ./sandbox
+        run: |
+          mv ./.sqlx ./tmp
+          cargo build && (echo 'unexpectedly build scceeded'; exit 1) || (:)
+          mv ./tmp ./.sqlx
+          cargo build
