--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -40,6 +40,7 @@ jobs:
       - name: Check sandbox
         working-directory: ./sandbox
         run: |
+          mv ./wrangler.toml.sample ./wrangler.toml
           mv ./.sqlx ./tmp
           cargo build && (echo 'unexpectedly build scceeded'; exit 1) || (:)
           mv ./tmp ./.sqlx
