--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -42,6 +42,8 @@ jobs:
         run: |
           mv ./wrangler.toml.sample ./wrangler.toml
           mv ./.sqlx ./tmp
-          cargo build && (echo 'unexpectedly build scceeded'; exit 1) || (:)
+          cargo build 2> tmp.log \
+            && (echo 'unexpectedly build scceeded'; exit 1) \
+            || (grep 'Neither miniflare D1 emulator nor .sqlx directory is found !' tmp.log && echo 'expected behavior' || exit 1)
           mv ./tmp ./.sqlx
           cargo build
