--- a/sqlx-d1/Cargo.toml
+++ b/sqlx-d1/Cargo.toml
@@ -18,17 +18,19 @@ sqlx-d1-macros = { path = "../sqlx-d1-macros", version = "=0.1.0", optional = tr
 
 [features]
 json   = ["sqlx-d1-core/json"]
-uuid   = ["sqlx-d1-core/uuid",  "sqlx-d1-macros?/uuid"]
+uuid   = ["sqlx-d1-core/uuid"]
+chrono = ["sqlx-d1-core/chrono"]
 macros = ["query", "derive"]
 query  = ["dep:sqlx-d1-macros", "sqlx-d1-macros/query"]
 derive = ["dep:sqlx-d1-macros", "sqlx-d1-macros/derive"]
 
 ################################
 DEBUG = ["sqlx-d1-core/DEBUG"]
-# default = [
-#     "json",
-#     "uuid",
-#     "macros",
-#     "DEBUG",
-# ]
+default = [
+    "json",
+    "uuid",
+    "chrono",
+    "macros",
+    "DEBUG",
+]
 ################################
