feat: add type integration for `chrono` (#6)
* feat: add chorono integration

* fix sandbox and CI

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -34,8 +34,9 @@ jobs:
           cargo build
           cargo build --features json
           cargo build --features uuid
+          cargo build --features chrono
           cargo build --features macros
-          cargo build --features json,uuid,macros
+          cargo build --features json,uuid,chrono,macros
 
       - name: Check sandbox
         working-directory: ./sandbox
