chore: add `Test documentation` step in workflows/CI.yml

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -28,6 +28,10 @@ jobs:
           toolchain: ${{ matrix.toolchain }}
           targets:   x86_64-unknown-linux-gnu, wasm32-unknown-unknown
 
+      - name: Test documentations
+        working-directory: ./sqlx-d1
+        run: cargo test --doc --features DEBUG
+
       - name: Check buildability
         working-directory: ./sqlx-d1
         run: |
