--- a/sqlx-d1-macros/Cargo.toml
+++ b/sqlx-d1-macros/Cargo.toml
@@ -16,6 +16,7 @@ license       = { workspace = true }
 proc-macro = true
 
 [features]
+DEBUG  = []
 derive = ["dep:heck"]
 query  = ["dep:sha2", "dep:hex", "dep:futures-lite", "sqlx-d1-core/offline"]
 
