--- a/sqlx-d1/Cargo.toml
+++ b/sqlx-d1/Cargo.toml
@@ -34,3 +34,6 @@ default = [
     "DEBUG",
 ]
 ################################
+
+[dev-dependencies]
+worker = { version = "0.5", features = ["d1"] }
