--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Check buildability
         working-directory: ./sqlx-d1
         run: |
-          TARGET=(test '${{ matrix.target }}' && echo '${{ matrix.target }}' || echo (rustc -vV | grep 'host' | sed 's/host: //'))
+          TARGET=$(test '${{ matrix.target }}' && echo '${{ matrix.target }}' || (rustc -vV | grep 'host' | sed 's/host: //'))
           cargo build --target $TARGET
           cargo build --target $TARGET --features json
           cargo build --target $TARGET --features uuid
