--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -37,6 +37,7 @@ jobs:
         working-directory: ./sqlx-d1
         run: |
           TARGET=$(test '${{ matrix.target }}' && echo '${{ matrix.target }}' || (rustc -vV | grep 'host' | sed 's/host: //'))
+          echo "---> testing on target `$TARGET`"
           cargo build --target $TARGET
           cargo build --target $TARGET --features json
           cargo build --target $TARGET --features uuid
