chore: add `Test documentation` step in workflows/CI.yml (#7)
* chore: add `Test documentation` step in workflows/CI.yml

* add `worker` to dev-dependencies and fix CI

* improve CI: check buildablity each on native and wasm32

* improve CI

* fix CI

--- a/sqlx-d1/Cargo.toml
+++ b/sqlx-d1/Cargo.toml
@@ -25,7 +25,7 @@ query  = ["dep:sqlx-d1-macros", "sqlx-d1-macros/query"]
 derive = ["dep:sqlx-d1-macros", "sqlx-d1-macros/derive"]
 
 ################################
-DEBUG = ["sqlx-d1-core/DEBUG"]
+DEBUG = ["sqlx-d1-core/DEBUG", "sqlx-d1-macros/DEBUG"]
 default = [
     "json",
     "uuid",
@@ -34,3 +34,6 @@ default = [
     "DEBUG",
 ]
 ################################
+
+[dev-dependencies]
+worker = { version = "0.5", features = ["d1"] }
