chore: update `package.metadata.docs.rs.features` of each package

--- a/sqlx-d1-core/Cargo.toml
+++ b/sqlx-d1-core/Cargo.toml
@@ -13,7 +13,7 @@ categories    = { workspace = true }
 license       = { workspace = true }
 
 [package.metadata.docs.rs]
-features = ["json", "uuid"]
+features = ["json", "uuid", "chrono", "offline"]
 
 [features]
 # time not implemented on this platform
