--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -59,5 +59,5 @@ jobs:
           cargo build --features DEBUG  # checking `readme_sample`
           echo '---> `readme_sample` is sucessfully built'
           cargo build --target (rustc --print host-tuple) \
-            && (echo '---> compilation itself suceeds for native target')
+            && echo '---> compilation itself suceeds for native target' \
             || exit 1
