--- a/sqlx-d1/Cargo.toml
+++ b/sqlx-d1/Cargo.toml
@@ -41,3 +41,4 @@ DEBUG = ["sqlx-d1-core/DEBUG", "sqlx-d1-macros?/DEBUG"]
 
 [dev-dependencies]
 worker = { version = "0.5", features = ["d1"] }
+serde  = { version = "1.0", features = ["derive"] }
