--- a/sqlx-d1/Cargo.toml
+++ b/sqlx-d1/Cargo.toml
@@ -13,16 +13,17 @@ categories    = { workspace = true }
 license       = { workspace = true }
 
 [package.metadata.docs.rs]
-features = ["json", "uuid", "chrono", "macros"]
+features = ["json", "uuid", "chrono", "decimal", "macros"]
 
 [dependencies]
 sqlx-d1-core   = { path = "../sqlx-d1-core",   version = "=0.1.4" }
 sqlx-d1-macros = { path = "../sqlx-d1-macros", version = "=0.1.4", optional = true }
 
 [features]
-json   = ["sqlx-d1-core/json"]
-uuid   = ["sqlx-d1-core/uuid"]
-chrono = ["sqlx-d1-core/chrono"]
+json    = ["sqlx-d1-core/json"]
+uuid    = ["sqlx-d1-core/uuid"]
+chrono  = ["sqlx-d1-core/chrono"]
+decimal = ["sqlx-d1-core/decimal"]
 
 macros = ["query", "derive"]
 query  = ["dep:sqlx-d1-macros", "sqlx-d1-macros/query"]
