--- a/sandbox/Cargo.toml
+++ b/sandbox/Cargo.toml
@@ -10,11 +10,12 @@ crate-type = ["cdylib", "rlib"]
 opt-level = "s"
 
 [dependencies]
-sqlx-d1 = { path = "../sqlx-d1", features = ["macros"] }
+sqlx-d1 = { path = "../sqlx-d1", features = ["macros", "uuid"] }
 console_error_panic_hook = "0.1"
 thiserror = "2.0"
 worker = { version = "0.5" }
 serde = { optional = true, version = "1.0", features = ["derive"] }
+uuid = { version = "1.16", features = ["serde"] }
 
 [dependencies.ohkami]
 git = "https://github.com/ohkami-rs/ohkami"
