--- a/sqlx-d1-core/Cargo.toml
+++ b/sqlx-d1-core/Cargo.toml
@@ -34,7 +34,7 @@ futures-core = { version = "0.3", default-features = false }
 futures-util = { version = "0.3", default-features = false }
 serde        = { version = "1.0" }
 log          = { version = "0.4" }  # required for `sqlx_core::connection::ConnectOptions`
-rust_decimal = { version = "1", optional = true, default-features = false }
+rust_decimal = { version = "1", optional = true, default-features = false, features = ["std"] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 sqlx-sqlite = { version = "=0.8.3", features = ["bundled"] }
