chore(sandbox): remove `ohkami` dependency

--- a/sandbox/Cargo.toml
+++ b/sandbox/Cargo.toml
@@ -14,13 +14,8 @@ sqlx-d1 = { path = "../sqlx-d1", features = ["macros", "uuid"] }
 console_error_panic_hook = "0.1"
 thiserror = "2.0"
 worker = { version = "0.6" }
-serde = { optional = true, version = "1.0", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
 uuid = { version = "1.16", features = ["serde"] }
 
-[dependencies.ohkami]
-git = "https://github.com/ohkami-rs/ohkami"
-branch = "v0.24"
-features = ["rt_worker"]
-
 [features]
-DEBUG = ["sqlx-d1/DEBUG", "dep:serde"]
+DEBUG = ["sqlx-d1/DEBUG"]
