--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -29,6 +29,7 @@ jobs:
           rustup update
           rustup default ${{ matrix.toolchain }}
           rustup target add wasm32-unknown-unknown
+          rustup component add rustfmt clippy
       
       - name: Test documentations
         working-directory: ./sqlx-d1
