--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -5,6 +5,8 @@ on:
   push:
     branches: ['main', 'v*']
 
+permissions: {}
+
 jobs:
   CI:
     runs-on: ubuntu-latest
@@ -29,23 +31,28 @@ jobs:
           rustup update
           rustup default ${{ matrix.toolchain }}
           rustup target add wasm32-unknown-unknown
-
+          rustup component add rustfmt clippy
+      
       - name: Test documentations
         working-directory: ./sqlx-d1
         run: cargo test --doc --features macros
 
-      - name: Check buildability
+      - name: Check fmt
+        run: |
+          cargo fmt --all --check
+
+      - name: Check clippy
         working-directory: ./sqlx-d1
         run: |
           TARGET=$(test '${{ matrix.target }}' && echo '${{ matrix.target }}' || (rustc --print host-tuple))
           echo "---> testing on target '$TARGET'"
-          cargo build --target $TARGET
-          cargo build --target $TARGET --features json
-          cargo build --target $TARGET --features uuid
-          cargo build --target $TARGET --features chrono
-          cargo build --target $TARGET --features macros
-          cargo build --target $TARGET --features decimal
-          cargo build --target $TARGET --features json,uuid,chrono,macros,decimal
+          cargo clippy --all-targets --target $TARGET -- --deny warnings
+          cargo clippy --all-targets --target $TARGET --features json -- --deny warnings
+          cargo clippy --all-targets --target $TARGET --features uuid -- --deny warnings
+          cargo clippy --all-targets --target $TARGET --features chrono -- --deny warnings
+          cargo clippy --all-targets --target $TARGET --features macros -- --deny warnings
+          cargo clippy --all-targets --target $TARGET --features decimal -- --deny warnings
+          cargo clippy --all-targets --target $TARGET --features json,uuid,chrono,macros,decimal -- --deny warnings
 
       - name: Check sandbox
         working-directory: ./sandbox
